# ai-engineering-month2-llms

./: .gitignore
ai_accounting_documents_assistant/: .gitignore  README.md  pyproject.toml
ai_accounting_documents_assistant/app/: chunker.py  config.py  currency_resolver.py  document_classifier.py  document_parser.py  embedder.py  file_ingestion.py  metadata_extractor.py  party_resolver.py  qdrant_store.py  rag_assistant.py  retriever.py  schemas.py  status_resolver.py  tax_resolver.py
ai_accounting_documents_assistant/data/raw/: sample_file.py
ai_accounting_documents_assistant/scripts/: ingest_real_files.py  search_real_files.py  test_chunker.py  test_document_classifier.py  test_metadata_extractor.py  test_ollama_embedder.py  test_rag_assistant.py
ai_resume_rag/: .gitignore  README.md  app.py  document_loader.py  embedding_service.py  evaluation_tests.py  job_match_service.py  ollama_client.py  pyproject.toml  rag_service.py  schemas.py  tailoring_service.py  text_chunker.py  vector_store.py
ai_resume_rag/docs/: sample_warehouse_resume.docx
ai_resume_rag/experiments/: chunking_demo.py  embedding_demo.py  faiss_demo.py  rag_demo.py
ai_resume_reviewer/: .gitignore  README.md  app.py  llm_client.py  prompts.py  pyproject.toml  resume_parser.py  schemas.py
