[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
